blue-green-ns/method2/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: flask-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 5000
      name: flask
      protocol: HTTP
    hosts:
    - "*"
