blue-green-ns/method2/istio/destinaionrule.yaml
#  a simple load balancing policy for the ratings service
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: bookinfo-ratings
spec:
  # host: ratings.prod.svc.cluster.local
  host: '*'
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
