blue-green-ns/method2/istio/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: videos-web
spec:
  hosts:
  - '*'
  gateways:
  - flask-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: flask-svc-blue.flask-ns-blue.svc.cluster.local
        port:
          number: 80
